--- a/cart.html
+++ b/cart.html
@@ -33,7 +33,7 @@
                     <div class="menu collapse navbar-collapse" id="mynavbar">
                         <ul class="navbar-nav p-0 m-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
+                                <a class="nav-link" href="index.html"
                                     >HOME <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
@@ -59,45 +59,53 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
-                                    >RENTAL <span><i class="fa-solid fa-plus"></i></span
+                                <a class="nav-link" href="access.html"
+                                    >ACCESS <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
+                                <a class="nav-link" href="about.html"
                                     >ABOUT <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
+                                <a class="nav-link" href="blog.html"
                                     >BLOG <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
+                                <a class="nav-link" href="contact.html"
                                     >CONTACT <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
                         </ul>
                         <div class="icon d-flex">
                             <div class="cart">
-                                <a href="" class="cart_icon me-5"><i class="fa-solid fa-cart-shopping"></i></a>
-                                <div class="cart_box">
-                                    <p class="m-0">Your Cart Is Empty</p>
+                                <a href="cart.html" class="cart_icon me-5"><i class="fa-solid fa-cart-shopping"></i></a>
+                                <div class="cart_box2">
+                                    <div class="img"><img src="img/accessdetail/ad_1.jpeg" alt="" /></div>
+                                    <div class="text">
+                                        <div class="name"><p class="m-0">Bluetooth Apple Key Finder</p></div>
+                                        <div class="total d-flex justify-content-between">
+                                            <div class="amount">
+                                                <p class="m-0">amount: 1</p>
+                                            </div>
+                                            <div class="price">
+                                                <p class="m-0">$20</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
+                                <div class="circle">1</div>
                             </div>
                             <div class="account">
-                                <a href="">LOG IN</a>
+                                <a href=""><i class="fa-solid fa-user"></i></a>
                                 <span class="me-2 ms-2">|</span>
-                                <a href="">SIGN IN</a>
+                                <a href=""><i class="fa-solid fa-right-from-bracket"></i></a>
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="hotline d-flex align-items-center">
-                        <i class="fa-solid fa-phone me-3"></i>
-                        <h4 class="m-0">0902368316</h4>
-                    </div> -->
                 </div>
             </nav>
         </div>
@@ -112,44 +120,87 @@
                 <div class="row">
                     <div class="left col-lg-6">
                         <div class="title">
-                            <h2>Porsche 911 Black Carbon</h2>
+                            <h2>Bluetooth Apple Key Finder - Airtag</h2>
                         </div>
                         <div class="cart-img">
-                            <img src="img/product/por/por_1.jpeg" alt="" />
+                            <img src="img/accessdetail/ad_1.jpeg" alt="" />
                         </div>
                     </div>
                     <div class="right col-lg-6">
-                        <div class="title">
-                            <h3>Cart Total</h3>
-                        </div>
-                        <div class="price">
+                        <div class="cate">
                             <div class="row">
-                                <div class="col-6">
-                                    <p>Subtotal</p>
+                                <div class="col-3">
+                                    <p>Product</p>
                                 </div>
-                                <div class="col-6">
-                                    <p>$150,000</p>
+                                <div class="col-3">
+                                    <p>Price</p>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-6">
-                                    <p>Additional fee</p>
+                                <div class="col-3">
+                                    <p>Quantity</p>
                                 </div>
-                                <div class="col-6">
-                                    <p>0</p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-6">
+                                <div class="col-3">
                                     <p>Total</p>
                                 </div>
-                                <div class="col-6">
-                                    <p>$150,000</p>
+                            </div>
+                            <div class="row">
+                                <div class="col-3">
+                                    <p>Apple Key Finder - Airtag</p>
+                                </div>
+                                <div class="col-3 d-flex align-items-center">
+                                    <div class="price">
+                                        <p>$ <span>20</span></p>
+                                        <div class="pricecore" style="display: none">20</div>
+                                    </div>
+                                </div>
+                                <div class="col-3 d-flex align-items-center">
+                                    <div class="add">
+                                        <div class="icon" type="minus"><i class="fa-solid fa-minus"></i></div>
+                                        <input type="text" placeholder="1" />
+                                        <div class="icon" type="plus"><i class="fa-solid fa-plus"></i></div>
+                                    </div>
+                                </div>
+                                <div class="col-3 d-flex align-items-center">
+                                    <div class="sum">
+                                        <p>
+                                            $ <span>20</span> <span><i class="ms-5 fa-solid fa-trash-can"></i></span>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="btn">
-                                <button><a href="checkout.html">Proceed to checkout</a></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="total">
+                    <div class="title">
+                        <h3>Cart Total</h3>
+                    </div>
+                    <div class="price">
+                        <div class="row">
+                            <div class="col-6">
+                                <p>Subtotal</p>
                             </div>
+                            <div class="sub col-6">
+                                <p>$ 20</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <p>Additional fee</p>
+                            </div>
+                            <div class="col-6">
+                                <p>0</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <p>Total</p>
+                            </div>
+                            <div class="totalall col-6">
+                                <p>$ 20</p>
+                            </div>
+                        </div>
+                        <div class="btn">
+                            <button><a href="checkout.html">Proceed to checkout</a></button>
                         </div>
                     </div>
                 </div>
@@ -188,7 +239,7 @@
                                     </li>
                                     <li>
                                         <a href=""
-                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Rent</a
+                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Accessories</a
                                         >
                                     </li>
 
