--- a/detail.html
+++ b/detail.html
@@ -26,14 +26,14 @@
         <div class="header">
             <nav class="navbar navbar-expand-sm">
                 <div class="container">
-                    <a class="navbar-brand m-0" href="javascript:void(0)"><img href="#top" src="img/logo.png" alt="" /></a>
+                    <a class="navbar-brand m-0" href="javascript:void(0)"><img class="" src="img/logo.png" alt="" /></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="menu collapse navbar-collapse" id="mynavbar">
                         <ul class="navbar-nav p-0 m-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
+                                <a class="nav-link" href="index.html"
                                     >HOME <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
@@ -47,8 +47,8 @@
                                             <a class="submenu-link" href="">CATEGORIES</a><span><i class="fa-solid fa-angle-right ms-2"></i></span>
                                             <div class="submenu2">
                                                 <ul>
-                                                    <li class="pb-2"><a href="">SUV</a></li>
-                                                    <li class="pb-2"><a href="">SEDAN</a></li>
+                                                    <li class="pb-2"><a href="buy.html">SUV</a></li>
+                                                    <li class="pb-2"><a href="buy.html">SEDAN</a></li>
                                                     <li class=""><a href="">USED</a></li>
                                                 </ul>
                                             </div>
@@ -59,23 +59,23 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
-                                    >RENTAL <span><i class="fa-solid fa-plus"></i></span
+                                <a class="nav-link" href="access.html"
+                                    >ACCESS <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
+                                <a class="nav-link" href="about.html"
                                     >ABOUT <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
+                                <a class="nav-link" href="blog.html"
                                     >BLOG <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
+                                <a class="nav-link" href="contact.html"
                                     >CONTACT <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
@@ -83,26 +83,17 @@
                         <div class="icon d-flex">
                             <div class="cart">
                                 <a href="" class="cart_icon me-5"><i class="fa-solid fa-cart-shopping"></i></a>
-                                <div class="cart_box active">
+                                <div class="cart_box">
                                     <p class="m-0">Your Cart Is Empty</p>
                                 </div>
-                                <div class="cart_box d-flex align-items-center">
-                                    <div class="img"><img src="img/product/por/por_1.jpeg" alt="" /></div>
-                                    <div class="text">Porsche 911 black</div>
-                                </div>
-                                <div class="circle">1</div>
                             </div>
                             <div class="account">
-                                <a href="">LOG IN</a>
+                                <a href="login.html">LOG IN</a>
                                 <span class="me-2 ms-2">|</span>
-                                <a href="">SIGN IN</a>
+                                <a href="signin.html">SIGN IN</a>
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="hotline d-flex align-items-center">
-                        <i class="fa-solid fa-phone me-3"></i>
-                        <h4 class="m-0">0902368316</h4>
-                    </div> -->
                 </div>
             </nav>
         </div>
