--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="menu collapse navbar-collapse" id="mynavbar">
                         <ul class="navbar-nav p-0 m-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
+                                <a class="nav-link" href="index.html"
                                     >HOME <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
@@ -46,8 +46,8 @@
                                             <a class="submenu-link" href="">CATEGORIES</a><span><i class="fa-solid fa-angle-right ms-2"></i></span>
                                             <div class="submenu2">
                                                 <ul>
-                                                    <li class="pb-2"><a href="">SUV</a></li>
-                                                    <li class="pb-2"><a href="">SEDAN</a></li>
+                                                    <li class="pb-2"><a href="buy.html">SUV</a></li>
+                                                    <li class="pb-2"><a href="buy.html">SEDAN</a></li>
                                                     <li class=""><a href="">USED</a></li>
                                                 </ul>
                                             </div>
@@ -58,23 +58,23 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
-                                    >RENTAL <span><i class="fa-solid fa-plus"></i></span
+                                <a class="nav-link" href="access.html"
+                                    >ACCESS <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
+                                <a class="nav-link" href="about.html"
                                     >ABOUT <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
+                                <a class="nav-link" href="blog.html"
                                     >BLOG <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
+                                <a class="nav-link" href="contact.html"
                                     >CONTACT <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
@@ -87,16 +87,12 @@
                                 </div>
                             </div>
                             <div class="account">
-                                <a href="">LOG IN</a>
+                                <a href="login.html">LOG IN</a>
                                 <span class="me-2 ms-2">|</span>
-                                <a href="">SIGN IN</a>
+                                <a href="signin.html">SIGN IN</a>
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="hotline d-flex align-items-center">
-                        <i class="fa-solid fa-phone me-3"></i>
-                        <h4 class="m-0">0902368316</h4>
-                    </div> -->
                 </div>
             </nav>
         </div>
@@ -124,7 +120,7 @@
                         <div class="carousel-caption">
                             <h3>Welcome to</h3>
                             <h2>
-                                Best Way To Rent Your <span><h2 class="d-inline">Dream</h2></span> Car
+                                Best Way To Get Your <span><h2 class="d-inline">Dream</h2></span> Car
                             </h2>
                             <p>There are many amazing cars ready to offer.</p>
                             <button>About more</button>
@@ -185,8 +181,9 @@
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item">All status</a></li>
                                     <li><a class="dropdown-item">Kia</a></li>
-                                    <li><a class="dropdown-item">Toyota</a></li>
+                                    <li><a class="dropdown-item">Porsche</a></li>
                                     <li><a class="dropdown-item">Mercedes</a></li>
+                                    <li><a class="dropdown-item">Audi</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -230,10 +227,10 @@
                                 <h5>Price Range</h5>
                                 <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">All status</button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item">2000USD</a></li>
-                                    <li><a class="dropdown-item">1500USD</a></li>
-                                    <li><a class="dropdown-item">1000USD</a></li>
-                                    <li><a class="dropdown-item">500USD</a></li>
+                                    <li><a class="dropdown-item">20000USD</a></li>
+                                    <li><a class="dropdown-item">15000USD</a></li>
+                                    <li><a class="dropdown-item">10000USD</a></li>
+                                    <li><a class="dropdown-item">150000USD</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -250,7 +247,9 @@
                         </div>
                         <div class="find col-lg-3">
                             <button type="button">
-                                <span><i class="fa-solid fa-magnifying-glass"></i></span> Find Your Car
+                                <a href="buy.html"
+                                    ><span><i class="fa-solid fa-magnifying-glass"></i></span> Find Your Car</a
+                                >
                             </button>
                         </div>
                     </div>
@@ -285,7 +284,7 @@
                                                 <li><p class="m-0 mt-1">Diesel</p></li>
                                             </ul>
                                             <div class="price">
-                                                <h4 class="m-0">$14,600</h4>
+                                                <h4 class="m-0">$200,000</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -302,7 +301,7 @@
                                             <div class="card-body">
                                                 <h6 class="card-title m-0">Porsche Macan SUV blue</h6>
                                                 <div class="price">
-                                                    <h5 class="m-0">$14,600</h5>
+                                                    <h5 class="m-0">$145,600</h5>
                                                 </div>
                                                 <div class="card-subtitle d-flex align-items-center mt-3">
                                                     <ul class="d-flex m-0">
@@ -323,7 +322,7 @@
                                             <div class="card-body">
                                                 <h6 class="card-title m-0">Porsche Taycan SUV white</h6>
                                                 <div class="price">
-                                                    <h5 class="m-0">$14,600</h5>
+                                                    <h5 class="m-0">$180,000</h5>
                                                 </div>
                                                 <div class="card-subtitle d-flex align-items-center mt-3">
                                                     <ul class="d-flex m-0">
@@ -344,7 +343,7 @@
                                             <div class="card-body">
                                                 <h6 class="card-title m-0">Audi i8 grey</h6>
                                                 <div class="price">
-                                                    <h5 class="m-0">$14,600</h5>
+                                                    <h5 class="m-0">$190,000</h5>
                                                 </div>
                                                 <div class="card-subtitle d-flex align-items-center mt-3">
                                                     <ul class="d-flex m-0">
@@ -365,7 +364,7 @@
                                             <div class="card-body">
                                                 <h6 class="card-title m-0">Kia K5 Sedan red</h6>
                                                 <div class="price">
-                                                    <h5 class="m-0">$14,600</h5>
+                                                    <h5 class="m-0">$210,000</h5>
                                                 </div>
                                                 <div class="card-subtitle d-flex align-items-center mt-3">
                                                     <ul class="d-flex m-0">
@@ -399,7 +398,7 @@
                                                 <li><p class="m-0 mt-1">Diesel</p></li>
                                             </ul>
                                             <div class="price">
-                                                <h4 class="m-0">$14,600</h4>
+                                                <h4 class="m-0">$145,600</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -416,7 +415,7 @@
                                             <div class="card-body">
                                                 <h6 class="card-title m-0">Porsche Macan SUV blue</h6>
                                                 <div class="price">
-                                                    <h5 class="m-0">$14,600</h5>
+                                                    <h5 class="m-0">$146,600</h5>
                                                 </div>
                                                 <div class="card-subtitle d-flex align-items-center mt-3">
                                                     <ul class="d-flex m-0">
@@ -437,7 +436,7 @@
                                             <div class="card-body">
                                                 <h6 class="card-title m-0">Porsche Taycan SUV white</h6>
                                                 <div class="price">
-                                                    <h5 class="m-0">$14,600</h5>
+                                                    <h5 class="m-0">$147,600</h5>
                                                 </div>
                                                 <div class="card-subtitle d-flex align-items-center mt-3">
                                                     <ul class="d-flex m-0">
@@ -458,7 +457,7 @@
                                             <div class="card-body">
                                                 <h6 class="card-title m-0">Audi i8 grey</h6>
                                                 <div class="price">
-                                                    <h5 class="m-0">$14,600</h5>
+                                                    <h5 class="m-0">$145,600</h5>
                                                 </div>
                                                 <div class="card-subtitle d-flex align-items-center mt-3">
                                                     <ul class="d-flex m-0">
@@ -479,7 +478,7 @@
                                             <div class="card-body">
                                                 <h6 class="card-title m-0">Kia K5 Sedan red</h6>
                                                 <div class="price">
-                                                    <h5 class="m-0">$14,600</h5>
+                                                    <h5 class="m-0">$147,600</h5>
                                                 </div>
                                                 <div class="card-subtitle d-flex align-items-center mt-3">
                                                     <ul class="d-flex m-0">
@@ -547,10 +546,7 @@
                             <h2>
                                 We Are Dedicated <span><h2 class="d-inline">To Provide</h2></span> Quality Service
                             </h2>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quae libero eos molestiae, sapiente eveniet. Adipisci odit quam eos iusto. Veniam quis repudiandae vero
-                                sed harum dolorum, eum eius facilis.
-                            </p>
+                            <p>Our store always offer great deals to customer and giving our very important customer the best service they ever have.</p>
                         </div>
                         <div class="pic">
                             <img src="img/product/por/whypor.webp" alt="" />
@@ -566,10 +562,7 @@
                                     </div>
                                     <div class="bot">
                                         <h4 class="mt-4">Best Quality Cars</h4>
-                                        <p class="m-0">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt neque maxime consequatur vel voluptas assumenda molestiae, quam eveniet optio blanditiis
-                                            repudiandae ea libero.
-                                        </p>
+                                        <p class="m-0">Car condition is always in the best. Great interiors and exteriors.</p>
                                     </div>
                                 </div>
                                 <div class="card p-3">
@@ -579,10 +572,7 @@
                                     </div>
                                     <div class="bot">
                                         <h4 class="mt-4">Certified Mechanics</h4>
-                                        <p class="m-0">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt neque maxime consequatur vel voluptas assumenda molestiae, quam eveniet optio blanditiis
-                                            repudiandae ea libero.
-                                        </p>
+                                        <p class="m-0">We have the most skillful mechanician team in order to help our customer to fix if our customers' cars are in trouble.</p>
                                     </div>
                                 </div>
                             </div>
@@ -595,10 +585,7 @@
                                     </div>
                                     <div class="bot">
                                         <h4 class="mt-4">Popular Brands</h4>
-                                        <p class="m-0">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt neque maxime consequatur vel voluptas assumenda molestiae, quam eveniet optio blanditiis
-                                            repudiandae ea libero.
-                                        </p>
+                                        <p class="m-0">German, Korean, Japanese brands are always available in our store. But we focus on luxury brands.</p>
                                     </div>
                                 </div>
                                 <div class="card p-3">
@@ -753,33 +740,33 @@
                             <div class="content">
                                 <ul>
                                     <li>
-                                        <a href=""
+                                        <a href="index.html"
                                             ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Home</a
                                         >
                                     </li>
                                     <li>
-                                        <a href=""
+                                        <a href="buy.html"
                                             ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Buy</a
                                         >
                                     </li>
                                     <li>
-                                        <a href=""
-                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Rent</a
+                                        <a href="access.html"
+                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Accessories</a
                                         >
                                     </li>
 
                                     <li>
-                                        <a href=""
+                                        <a href="about.html"
                                             ><span><i class="fa-solid fa-arrow-right me-2"></i></span>About</a
                                         >
                                     </li>
                                     <li>
-                                        <a href=""
+                                        <a href="blog.html"
                                             ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Blog</a
                                         >
                                     </li>
                                     <li>
-                                        <a href=""
+                                        <a href="contact.html"
                                             ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Contact</a
                                         >
                                     </li>
