--- a/buy.html
+++ b/buy.html
@@ -60,7 +60,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="javascript:void(0)"
-                                    >RENTAL <span><i class="fa-solid fa-plus"></i></span
+                                    >ACCESS<span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
 
