--- a/checkout.html
+++ b/checkout.html
@@ -59,7 +59,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="javascript:void(0)"
-                                    >RENTAL <span><i class="fa-solid fa-plus"></i></span
+                                    >ACCESS <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
 
@@ -81,22 +81,30 @@
                         </ul>
                         <div class="icon d-flex">
                             <div class="cart">
-                                <a href="" class="cart_icon me-5"><i class="fa-solid fa-cart-shopping"></i></a>
-                                <div class="cart_box">
-                                    <p class="m-0">Your Cart Is Empty</p>
+                                <a href="cart.html" class="cart_icon me-5"><i class="fa-solid fa-cart-shopping"></i></a>
+                                <!-- <div class="cart_box2">
+                                    <div class="img"><img src="img/accessdetail/ad_1.jpeg" alt="" /></div>
+                                    <div class="text">
+                                        <div class="name"><p class="m-0">Bluetooth Apple Key Finder</p></div>
+                                        <div class="total d-flex justify-content-between">
+                                            <div class="amount">
+                                                <p class="m-0">amount: 1</p>
+                                            </div>
+                                            <div class="price">
+                                                <p class="m-0">$20</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
+                                <div class="circle">1</div> -->
                             </div>
                             <div class="account">
-                                <a href="">LOG IN</a>
+                                <a href=""><i class="fa-solid fa-user"></i></a>
                                 <span class="me-2 ms-2">|</span>
-                                <a href="">SIGN IN</a>
+                                <a href=""><i class="fa-solid fa-right-from-bracket"></i></a>
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="hotline d-flex align-items-center">
-                        <i class="fa-solid fa-phone me-3"></i>
-                        <h4 class="m-0">0902368316</h4>
-                    </div> -->
                 </div>
             </nav>
         </div>
@@ -108,6 +116,79 @@
                         <li class="breadcrumb-item active"><a href="#">Checkout</a></li>
                     </ul>
                 </div>
+            </div>
+        </div>
+        <div class="detail">
+            <div class="container">
+                <div class="title">
+                    <h2>Billing detail</h2>
+                </div>
+                <div class="form">
+                    <form class="bill-form">
+                        <div class="info">
+                            <input class="name" type="text" placeholder="Fullname" required />
+                            <input class="address" type="text" placeholder="Address" required />
+                            <input class="city" type="text" placeholder="City" required />
+                            <input class="phone" type="number" placeholder="Phone number" required />
+                            <input class="email" type="email" placeholder="Email" required />
+                        </div>
+                        <div class="total">
+                            <div class="title">
+                                <h3>Your Order</h3>
+                            </div>
+                            <div class="price">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <p>Subtotal</p>
+                                    </div>
+                                    <div class="sub col-6">
+                                        <p>$ 20</p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <p>Additional fee</p>
+                                    </div>
+                                    <div class="col-6">
+                                        <p>0</p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <p>Total</p>
+                                    </div>
+                                    <div class="totalall col-6">
+                                        <p>$ 20</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="pay">
+                            <div class="title">
+                                <h3>Payment</h3>
+                            </div>
+                            <div class="text">
+                                <p class="m-0">Cash on delivery. If you want to change method, please contact with us</p>
+                            </div>
+                        </div>
+                        <div class="btn">
+                            <button><a>Place Order</a></button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="popup">
+            <div class="popup-content">
+                <i class="fa-solid fa-circle-check"></i>
+                <div class="text">
+                    <h1>Order Successful!</h1>
+                    <h4>Thank you for your choice.</h4>
+                    <div class="btn">
+                        <button><a href="index.html">Back to home page</a></button>
+                    </div>
+                </div>
+                <img class="m-0" src="img/car_form.png" alt="" />
             </div>
         </div>
         <div class="footer">
@@ -143,7 +224,7 @@
                                     </li>
                                     <li>
                                         <a href=""
-                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Rent</a
+                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Accessories</a
                                         >
                                     </li>
 
