--- a/home_login.html
+++ b/home_login.html
@@ -32,7 +32,7 @@
                     <div class="menu collapse navbar-collapse" id="mynavbar">
                         <ul class="navbar-nav p-0 m-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
+                                <a class="nav-link" href="index.html"
                                     >HOME <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
@@ -46,8 +46,8 @@
                                             <a class="submenu-link" href="">CATEGORIES</a><span><i class="fa-solid fa-angle-right ms-2"></i></span>
                                             <div class="submenu2">
                                                 <ul>
-                                                    <li class="pb-2"><a href="">SUV</a></li>
-                                                    <li class="pb-2"><a href="">SEDAN</a></li>
+                                                    <li class="pb-2"><a href="buy.html">SUV</a></li>
+                                                    <li class="pb-2"><a href="buy.html">SEDAN</a></li>
                                                     <li class=""><a href="">USED</a></li>
                                                 </ul>
                                             </div>
@@ -58,23 +58,23 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
-                                    >RENTAL <span><i class="fa-solid fa-plus"></i></span
+                                <a class="nav-link" href="access.html"
+                                    >ACCESS <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
+                                <a class="nav-link" href="about.html"
                                     >ABOUT <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
+                                <a class="nav-link" href="blog.html"
                                     >BLOG <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)"
+                                <a class="nav-link" href="contact.html"
                                     >CONTACT <span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
@@ -87,16 +87,12 @@
                                 </div>
                             </div>
                             <div class="account">
-                                <a href=""><i class="fa-solid fa-user"></i></a>
+                                <a href="login.html">LOG IN</a>
                                 <span class="me-2 ms-2">|</span>
-                                <a href=""><i class="fa-solid fa-right-from-bracket"></i></a>
+                                <a href="signin.html">SIGN IN</a>
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="hotline d-flex align-items-center">
-                        <i class="fa-solid fa-phone me-3"></i>
-                        <h4 class="m-0">0902368316</h4>
-                    </div> -->
                 </div>
             </nav>
         </div>
