--- a/about.html
+++ b/about.html
@@ -4,7 +4,293 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>About</title>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+            integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+
+        <!-- Css Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <!-- Global css -->
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/about.css" />
     </head>
-    <body></body>
+    <body>
+        <div class="header">
+            <nav class="navbar navbar-expand-sm">
+                <div class="container">
+                    <a class="navbar-brand m-0" href="javascript:void(0)"><img class="" src="img/logo.png" alt="" /></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="menu collapse navbar-collapse" id="mynavbar">
+                        <ul class="navbar-nav p-0 m-0">
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html"
+                                    >HOME <span><i class="fa-solid fa-plus"></i></span
+                                ></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="buy.html"
+                                    >BUY <span><i class="fa-solid fa-plus"></i></span
+                                ></a>
+                                <div class="submenu">
+                                    <ul>
+                                        <li class="cate pb-2 d-flex align-items-center">
+                                            <a class="submenu-link" href="">CATEGORIES</a><span><i class="fa-solid fa-angle-right ms-2"></i></span>
+                                            <div class="submenu2">
+                                                <ul>
+                                                    <li class="pb-2"><a href="">SUV</a></li>
+                                                    <li class="pb-2"><a href="">SEDAN</a></li>
+                                                    <li class=""><a href="">USED</a></li>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                        <li class="pb-2"><a class="submenu-link" href="">NEW</a></li>
+                                        <li class=""><a class="submenu-link" href="">USED</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="access.html"
+                                    >ACCESS<span><i class="fa-solid fa-plus"></i></span
+                                ></a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html"
+                                    >ABOUT <span><i class="fa-solid fa-plus"></i></span
+                                ></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="blog.html"
+                                    >BLOG <span><i class="fa-solid fa-plus"></i></span
+                                ></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html"
+                                    >CONTACT <span><i class="fa-solid fa-plus"></i></span
+                                ></a>
+                            </li>
+                        </ul>
+                        <div class="icon d-flex">
+                            <div class="cart">
+                                <a href="" class="cart_icon me-5"><i class="fa-solid fa-cart-shopping"></i></a>
+                                <div class="cart_box">
+                                    <p class="m-0">Your Cart Is Empty</p>
+                                </div>
+                            </div>
+                            <div class="account">
+                                <a href="">LOG IN</a>
+                                <span class="me-2 ms-2">|</span>
+                                <a href="">SIGN IN</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <div class="head-banner">
+            <div class="banner"><img src="img/banner/banner_1.webp" alt="" /></div>
+            <div class="container">
+                <h2>ABOUT</h2>
+            </div>
+        </div>
+        <div class="content">
+            <div class="container">
+                <div class="goal">
+                    <div class="title">
+                        <h2>Our Goal</h2>
+                    </div>
+                    <div class="subtitle">
+                        <h6>We are dedicated to bring to our customer the best car and the most wonderful service.</h6>
+                    </div>
+                </div>
+                <div class="team">
+                    <div class="title">
+                        <h2>Our team</h2>
+                    </div>
+                    <div class="row">
+                        <div class="col-3">
+                            <div class="card-img">
+                                <img src="img/team/t1.jpeg" alt="" />
+                            </div>
+                            <div class="text">
+                                <p>Andrew Wiggins</p>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="card-img">
+                                <img src="img/team/t2.jpeg" alt="" />
+                            </div>
+                            <div class="text">
+                                <p>Terry Crew</p>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="card-img">
+                                <img src="img/team/t3.jpeg" alt="" />
+                            </div>
+                            <div class="text">
+                                <p>Michael James</p>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="card-img">
+                                <img src="img/team/t4.webp" alt="" />
+                            </div>
+                            <div class="text">
+                                <p>Anna Taylor</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial mt-5">
+                    <div class="title">
+                        <h2>Our Testimonial</h2>
+                        <div class="line1"></div>
+                        <div class="line2"></div>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="review col-lg-4">
+                            <div class="card">
+                                <img class="card-img-top" src="img/product/testi/test_1.jpeg" alt="Card image" />
+                                <div class="card-body">
+                                    <div class="ava"><img src="img/ava/p1.jpeg" alt="" /></div>
+                                    <h5 class="card-title">Felicia Queen</h5>
+                                    <div class="card-subtitle mt-3">
+                                        <p>
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor error natus adipisci itaque veritatis repudiandae maxime sapiente quia fugiat exercitationem,
+                                            dolorem aliquid quasi omnis perspiciatis molestias nostrum earum ea. Minus?
+                                        </p>
+                                    </div>
+                                    <div class="icon"><i class="fa-solid fa-quote-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="review col-lg-4">
+                            <div class="card">
+                                <img class="card-img-top" src="img/product/testi/test_2.webp" alt="Card image" />
+                                <div class="card-body">
+                                    <div class="ava"><img src="img/ava/p2.jpeg" alt="" /></div>
+                                    <h5 class="card-title">Adam James</h5>
+                                    <div class="card-subtitle mt-3">
+                                        <p>
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor error natus adipisci itaque veritatis repudiandae maxime sapiente quia fugiat exercitationem,
+                                            dolorem aliquid quasi omnis perspiciatis molestias nostrum earum ea. Minus?
+                                        </p>
+                                    </div>
+                                    <div class="icon"><i class="fa-solid fa-quote-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="review col-lg-4">
+                            <div class="card">
+                                <img class="card-img-top" src="img/product/testi/test_3.jpeg" alt="Card image" />
+                                <div class="card-body">
+                                    <div class="ava"><img src="img/ava/p3.avif" alt="" /></div>
+                                    <h5 class="card-title">Morgan McDonald</h5>
+                                    <div class="card-subtitle mt-3">
+                                        <p>
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor error natus adipisci itaque veritatis repudiandae maxime sapiente quia fugiat exercitationem,
+                                            dolorem aliquid quasi omnis perspiciatis molestias nostrum earum ea. Minus?
+                                        </p>
+                                    </div>
+                                    <div class="icon"><i class="fa-solid fa-quote-right"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="container">
+                <div class="top">
+                    <div class="row">
+                        <div class="col-md-6 col-lg-4">
+                            <div class="title">
+                                <h4>ABOUT COMPANY</h4>
+                            </div>
+                            <div class="content">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <h6>WE ARE AVAILABLE</h6>
+                                <p>Mon-Sat: 09:00 am to 6:30 pm</p>
+                                <button>CONTACT US</button>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4">
+                            <div class="title">
+                                <h4>QUICK LINKS</h4>
+                            </div>
+                            <div class="content">
+                                <ul>
+                                    <li>
+                                        <a href="index.html"
+                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Home</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="buy.html"
+                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Buy</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="access.html"
+                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Accessories</a
+                                        >
+                                    </li>
+
+                                    <li>
+                                        <a href="about.html"
+                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>About</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="blog.html"
+                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Blog</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="contact.html"
+                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Contact</a
+                                        >
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4">
+                            <div class="title">
+                                <h4>NEWSLETTER</h4>
+                            </div>
+                            <div class="content">
+                                <p>Get our latest news and discount</p>
+                                <input type="text" placeholder="Email Address" />
+                                <button>SUBSCRIBE</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="bot">
+                    <div class="left">
+                        <p>Copyright@2022 DuSDEe All Rights Reserved</p>
+                    </div>
+                    <div class="right">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- jquery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+        <!-- js bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="js/buy.js"></script>
+    </body>
 </html>
