--- a/access_detail.html
+++ b/access_detail.html
@@ -311,7 +311,7 @@
                 </div>
             </div>
         </div>
-        <div class="popup active">
+        <div class="popup">
             <div class="popup-content">
                 <div class="form">
                     <div class="form-login container">
