--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,20 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Contact</title>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+            integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+
+        <!-- Css Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <!-- Global css -->
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/contact.css" />
     </head>
     <body>
         <div class="header">
@@ -31,8 +44,8 @@
                                             <a class="submenu-link" href="">CATEGORIES</a><span><i class="fa-solid fa-angle-right ms-2"></i></span>
                                             <div class="submenu2">
                                                 <ul>
-                                                    <li class="pb-2"><a href="buy.html">SUV</a></li>
-                                                    <li class="pb-2"><a href="buy.html">SEDAN</a></li>
+                                                    <li class="pb-2"><a href="">SUV</a></li>
+                                                    <li class="pb-2"><a href="">SEDAN</a></li>
                                                     <li class=""><a href="">USED</a></li>
                                                 </ul>
                                             </div>
@@ -44,7 +57,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="access.html"
-                                    >ACCESS <span><i class="fa-solid fa-plus"></i></span
+                                    >ACCESS<span><i class="fa-solid fa-plus"></i></span
                                 ></a>
                             </li>
 
@@ -72,14 +85,144 @@
                                 </div>
                             </div>
                             <div class="account">
-                                <a href="login.html">LOG IN</a>
+                                <a href="">LOG IN</a>
                                 <span class="me-2 ms-2">|</span>
-                                <a href="signin.html">SIGN IN</a>
+                                <a href="">SIGN IN</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </nav>
         </div>
+        <div class="head-banner">
+            <div class="banner"><img src="img/banner/banner_1.webp" alt="" /></div>
+            <div class="container">
+                <h2>CONTACT</h2>
+            </div>
+        </div>
+        <div class="container">
+            <div class="contact mt-5">
+                <div class="row">
+                    <div class="col-6 w-75">
+                        <div class="title">
+                            <h3>We would love to here your opinion</h3>
+                        </div>
+                        <div class="subtitle">
+                            <h5>If you have any question or suggestion. We would love to hear from your</h5>
+                        </div>
+                        <div class="form">
+                            <form>
+                                <div class="info">
+                                    <input class="email" type="email" placeholder="Email" required />
+                                    <input class="name" type="text" placeholder="Name" required />
+                                </div>
+                                <div class="mess">
+                                    <textarea name="" id=""></textarea>
+                                </div>
+
+                                <div class="btn">
+                                    <button>Send</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="col-6 w-25 mt-5">
+                        <div class="title">
+                            <h4>Contact Us:</h4>
+                        </div>
+                        <div class="subtitle">
+                            <ul>
+                                <li>Phone: 01928200</li>
+                                <li>Email: jjks@gmail.com</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="container">
+                <div class="top">
+                    <div class="row">
+                        <div class="col-md-6 col-lg-4">
+                            <div class="title">
+                                <h4>ABOUT COMPANY</h4>
+                            </div>
+                            <div class="content">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <h6>WE ARE AVAILABLE</h6>
+                                <p>Mon-Sat: 09:00 am to 6:30 pm</p>
+                                <button>CONTACT US</button>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4">
+                            <div class="title">
+                                <h4>QUICK LINKS</h4>
+                            </div>
+                            <div class="content">
+                                <ul>
+                                    <li>
+                                        <a href="index.html"
+                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Home</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="buy.html"
+                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Buy</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="access.html"
+                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Accessories</a
+                                        >
+                                    </li>
+
+                                    <li>
+                                        <a href="about.html"
+                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>About</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="blog.html"
+                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Blog</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="contact.html"
+                                            ><span><i class="fa-solid fa-arrow-right me-2"></i></span>Contact</a
+                                        >
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4">
+                            <div class="title">
+                                <h4>NEWSLETTER</h4>
+                            </div>
+                            <div class="content">
+                                <p>Get our latest news and discount</p>
+                                <input type="text" placeholder="Email Address" />
+                                <button>SUBSCRIBE</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="bot">
+                    <div class="left">
+                        <p>Copyright@2022 DuSDEe All Rights Reserved</p>
+                    </div>
+                    <div class="right">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- jquery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+        <!-- js bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="js/blog.js"></script>
     </body>
 </html>
