--- a/detail.html
+++ b/detail.html
@@ -358,6 +358,9 @@
                     <h4>Thank you for your consideration.</h4>
                     <h4>We will response in a few minutes.</h4>
                 </div>
+                <div class="btn">
+                    <button>Continue shopping</button>
+                </div>
                 <img class="m-0" src="img/car_form.png" alt="" />
             </div>
         </div>
